+++ version 3.0-alpha1:
* gadu: #2937 fixed: file transfers are now compatible with GG 12 and GG Drive (Vogel)
* gui: #1713 implemented: added option to always show identity in buddies list (Vogel)

+++ version 2.0-rc2
* gui: #2940 fixed: crash on exit when not using tabs plugin (Vogel)
* otr: #2947 fixed: <span> marks in GG messages when otr is enabled (Vogel)
* translations: complete Turkish translation (kardanadam26)
* hints: #2924 fixed: not displaying avatars (Vogel)

+++ version 2.0-rc1
* translations: #2943 fixed: re-added Qt translation files (Vogel)
* translations: add Turkish translation (kardanadam26)

+++ version 2.0-beta1
* docking: #2921 done: change tooltip text on Windows (Vogel)
* hints: #2922 fixed: invalid images on Windows (Vogel)
* gui: #2920 fixed: problems with Open chat minimized option (Vogel)
* windows: #2923 fixed: Kadu hangs for few seconds from time to time (Vogel)
* gui: #2925 fixed: invalid plugin category names on Windows (Vogel)
* chat: #2930 fixed: count of unread messages is now proper when chat window is minimized (Vogel)
* chat: #2929 fixed: improve blinking timing on chat window with new messages (Vogel)
* tabs: #2934 fixed: properly handle common close button settings (Vogel)
* chat: #2928 fixed: properly hadnle disabling "Store opened chats" option (Vogel)
* sound: #2931 fixed: player thread could block itself on exit and never end (Vogel)
* windows: #2909 fixed: does not restore window geometry when "Start minimized" is on (Vogel)
* sound: #2935 fixed: sound playing works properly (Vogel)

+++ version 2.0-alpha2
* windows: #2858 fixed: blinking main window on Kadu exit (Vogel)
* windows: #2910 fixed: unable to remove stale lock file (Vogel)
* windows: #2915 fixed: invalid tray tooltip (Vogel)
* windows: #2914 fixed: avatars not displayed properly in Open Chat with... window (Vogel)
* gadu: #2893 fixed: never show as online to buddies with 'Offline to' option on (Vogel)